Modificata route per calendario
Ora è possibile passare una serie di BuildingId in formato CSV per ricevere la lista di eventi, quest'ultimi filtrati per calendar/future/all.
